--- a/bib/references.bib
+++ b/bib/references.bib
@@ -7,7 +7,9 @@
   number={},
   pages={1-8},
   keywords={Niobium;Support vector machines;Training;Optimization;Computational modeling;Nickel;Radio frequency},
-  doi={10.1109/IJCNN.2015.7280644}}
+  doi={10.1109/IJCNN.2015.7280644},
+series={2015 International Joint Conference on Neural Networks (IJCNN)}
+}
 
 
 @article{JMLRv2018444,
@@ -19,7 +21,8 @@
   number  = {53},
   pages   = {1--32},
   url     = {http://jmlr.org/papers/v20/18-444.html},
-  doi	  = {10.48550/arXiv.1802.09596}
+  doi	  = {10.48550/arXiv.1802.09596},
+series={Journal of Machine Learning Research, Vol. 20}
 }
 
 
@@ -30,7 +33,8 @@
   year={2020},
   volume={abs/2007.07588},
   url={https://api.semanticscholar.org/CorpusID:220525868},
-  doi	  = {10.48550/arXiv.2007.07588}
+  doi	  = {10.48550/arXiv.2007.07588},
+series={arXiv preprint arXiv:2007.07588, 2020}
 }
 
 
@@ -49,7 +53,8 @@ doi = {10.1016/j.ipm.2021.102752},
 journal = {Inf. Process. Manage.},
 month = {nov},
 numpages = {18},
-keywords = {Technology intelligence, F-term, Patent analysis, Natural language processing, Deep learning}
+keywords = {Technology intelligence, F-term, Patent analysis, Natural language processing, Deep learning},
+series={Information Processing & Management, Vol. 58}
 }
 
 
@@ -70,7 +75,8 @@ address="Berlin, Heidelberg",
 pages="102--111",
 abstract="In this paper we use Natural Language Processing techniques to improve different machine learning approaches (Support Vector Machines (SVM), Local SVM, Random Forests) to the problem of automatic keyphrases extraction from scientific papers. For the evaluation we propose a large and high-quality dataset: 2000 ACM papers from the Computer Science domain. We evaluate by comparison with expert-assigned keyphrases. Evaluation shows promising results that outperform state-of-the-art Bayesian learning system KEA improving the average F-Measure from 22{\%} (KEA) to 30{\%} (Random Forest) on the same dataset without the use of controlled vocabularies. Finally, we report a detailed analysis of the effect of the individual NLP features and data set size on the overall quality of extracted keyphrases.",
 isbn="978-3-642-13654-2",
-url={https://link.springer.com/chapter/10.1007/978-3-642-13654-2_12}
+url={https://link.springer.com/chapter/10.1007/978-3-642-13654-2_12},
+series={ICADL 2010, Lecture Notes in Computer Science, vol. 6102}
 }
 
 
@@ -93,7 +99,8 @@ address="Singapore",
 pages="695--704",
 abstract="Pudasaini, ShushantaShakya, SubarnaLamichhane, SagarAdhikari, SajjanTamang, AakashAdhikari, SujanThe world is intrigued by data. In fact, huge capitals are invested to devise means that implements statistics and extract analytics from these sources. However, when we examine the studies performed on applicant tracking systems that retrieve valuable information from candidates' CVs and job descriptions, they are mostly rule-based and hardly manage to employ contemporary techniques. Even though these documents vary in contents, the structure is almost identical. Accordingly, in this paper, we implement an NLP pipeline for the extraction of such structured information from a wide variety of textual documents. As a reference, textual documents which are used in applicant tracking systems like CV (Curriculum Vitae) and job vacancy information have been considered. The proposed NLP pipeline is built with several NLP techniques like document classification, document segmentation and text extraction. Initially for the classification of textual documents, support vector machines (SVM) and XGBoost algorithms have been implemented. Different segments of the identified document are categorized using NLP techniques such as chunking, regex matching and POS tagging. Relevant information from every segment is further extracted using techniques like Named Entity Recognition (NER), regex matching and pool parsing. Extraction of such structured information from textual documents can help to gain insights and use those insights in document maintenance, document scoring, matching and auto-filling forms.",
 isbn="978-981-16-2126-0",
-url={https://link.springer.com/chapter/10.1007/978-981-16-2126-0_54}
+url={https://link.springer.com/chapter/10.1007/978-981-16-2126-0_54},
+series={Expert Clouds and Applications, Lecture Notes in Networks and Systems, vol. 209}
 }
 
 
@@ -106,7 +113,8 @@ url={https://link.springer.com/chapter/10.1007/978-981-16-2126-0_54}
   pages={3197--3224},
   year={2023},
   publisher={Springer},
-  doi={10.1007/s11192-023-04689-3}
+  doi={10.1007/s11192-023-04689-3},
+series={Scientometrics, Vol. 128}
 }
 
 
@@ -119,7 +127,8 @@ url={https://link.springer.com/chapter/10.1007/978-981-16-2126-0_54}
   number={},
   pages={105-114},
   keywords={Natural language processing;Runtime;Software;Computer languages;Visualization;Accuracy;Computer architecture;Distributed NLP Tool;Dashboard;Integration and Testing;Visualization;Validation},
-  doi={10.1109/ICCSA.2013.24}}
+  doi={10.1109/ICCSA.2013.24},
+series={2013 13th International Conference on Computational Science and Its Applications (ICCSA)}}
 
 
 @article{1010800887441720201774442,
@@ -147,8 +156,8 @@ eprint = {
     
     
 
-}
-
+},
+series={Journal of Computer Information Systems, Vol. 62}
 }
 
 
@@ -160,7 +169,8 @@ eprint = {
   year={2017},
   volume={abs/1707.01890},
   url={https://api.semanticscholar.org/CorpusID:13324724},
-  doi={10.48550/arXiv.1707.01890}
+  doi={10.48550/arXiv.1707.01890},
+series={arXiv preprint arXiv:1707.01890 (2017)}
 }
 
 
@@ -170,7 +180,8 @@ doi={10.1017/psrm.2023.61},
 journal={Political Science Research and Methods}, 
 author={Arnold, Christian and Biedebach, Luka and Küpfer, Andreas and Neunhoeffer, Marcel}, 
 year={2024}, 
-pages={1–8}
+pages={1–8},
+series={Political Science Research and Methods, 2024}
 } 
 
 
@@ -179,7 +190,8 @@ pages={1–8}
   author={Bahmani, Mohamadjavad and Shawi, Radwa El and Potikyan, Nshan and Sakr, Sherif},
   journal={arXiv preprint arXiv:2108.13066},
   year={2021},
-  doi={10.48550/arXiv.2108.13066}
+  doi={10.48550/arXiv.2108.13066},
+series={arXiv preprint arXiv:2108.13066}
 }
 
 
@@ -194,7 +206,8 @@ doi = {https://doi.org/10.1016/j.neucom.2020.07.061},
 url = {https://www.sciencedirect.com/science/article/pii/S0925231220311693},
 author = {Li Yang and Abdallah Shami},
 keywords = {Hyper-parameter optimization, Machine learning, Bayesian optimization, Particle swarm optimization, Genetic algorithm, Grid search},
-abstract = {Machine learning algorithms have been used widely in various applications and areas. To fit a machine learning model into different problems, its hyper-parameters must be tuned. Selecting the best hyper-parameter configuration for machine learning models has a direct impact on the model’s performance. It often requires deep knowledge of machine learning algorithms and appropriate hyper-parameter optimization techniques. Although several automatic optimization techniques exist, they have different strengths and drawbacks when applied to different types of problems. In this paper, optimizing the hyper-parameters of common machine learning models is studied. We introduce several state-of-the-art optimization techniques and discuss how to apply them to machine learning algorithms. Many available libraries and frameworks developed for hyper-parameter optimization problems are provided, and some open challenges of hyper-parameter optimization research are also discussed in this paper. Moreover, experiments are conducted on benchmark datasets to compare the performance of different optimization methods and provide practical examples of hyper-parameter optimization. This survey paper will help industrial users, data analysts, and researchers to better develop machine learning models by identifying the proper hyper-parameter configurations effectively.}
+abstract = {Machine learning algorithms have been used widely in various applications and areas. To fit a machine learning model into different problems, its hyper-parameters must be tuned. Selecting the best hyper-parameter configuration for machine learning models has a direct impact on the model’s performance. It often requires deep knowledge of machine learning algorithms and appropriate hyper-parameter optimization techniques. Although several automatic optimization techniques exist, they have different strengths and drawbacks when applied to different types of problems. In this paper, optimizing the hyper-parameters of common machine learning models is studied. We introduce several state-of-the-art optimization techniques and discuss how to apply them to machine learning algorithms. Many available libraries and frameworks developed for hyper-parameter optimization problems are provided, and some open challenges of hyper-parameter optimization research are also discussed in this paper. Moreover, experiments are conducted on benchmark datasets to compare the performance of different optimization methods and provide practical examples of hyper-parameter optimization. This survey paper will help industrial users, data analysts, and researchers to better develop machine learning models by identifying the proper hyper-parameter configurations effectively.},
+series={Neurocomputing, Volume 415}
 }
 
 
@@ -217,7 +230,8 @@ address="Cham",
 pages="343--359",
 abstract="Due to the widespread use of the Internet, users have the ease of accessing collections of university academic documents stored in virtual libraries whose information is of an unstructured type. In recent years, the production and publication of scientific documents in Ecuador have increased considerably, so the search and classification of documents is a fundamental task within information retrieval computer systems. Intelligent search systems allow found information with a high degree of accuracy and similarity. For the development of this project, academic documents from the Ecuador Network of Open Access Repositories (RRAAE) were retrieved using a glossary of terms in the area of science and technology. For the recovery of documents, the web scraping technique was used and its results were stored in a cloud database in JSON format. In the recovered documents, NLP techniques were applied to clean and homogenize the unstructured information. Two similarity metrics were used to measure the divergence between the retrieved documents, and similarity matrices were generated based on the title, keywords, and abstract, which were then unified into a weighted matrix. The results of the system are displayed in a web interface that, through the use of graphs, shows the relationship between the linked documents. The operation of the similarity system was validated through functional tests through experimentation with a collection of 30 queries with indexed and non-indexed terms in the input of the information retrieval system. The experiments showed that for indexed terms, the system performs better.",
 isbn="978-3-031-28032-0",
-url={https://link.springer.com/chapter/10.1007/978-3-031-28032-0_28}
+url={https://link.springer.com/chapter/10.1007/978-3-031-28032-0_28},
+series={Information for a Better World: Normality, Virtuality, Physicality, Inclusivity. iConference 2023}
 }
 
 
@@ -235,6 +249,7 @@ url={https://link.springer.com/chapter/10.1007/978-3-031-28032-0_28}
     doi = {10.1136/amiajnl-2011-000183},
     url = {https://doi.org/10.1136/amiajnl-2011-000183},
     eprint = {https://academic.oup.com/jamia/article-pdf/18/5/607/5964646/18-5-607.pdf},
+series={Journal of the American Medical Informatics Association, Volume 18}
 }
 
 
@@ -246,7 +261,8 @@ url={https://link.springer.com/chapter/10.1007/978-3-031-28032-0_28}
   year={2018},
   volume={abs/1807.02383},
   url={https://api.semanticscholar.org/CorpusID:49653505},
-  doi={10.48550/arXiv.1807.02383}
+  doi={10.48550/arXiv.1807.02383},
+series={ArXiv abs/1807.02383 (2018)}
 }
 
 
@@ -259,7 +275,8 @@ url={https://link.springer.com/chapter/10.1007/978-3-031-28032-0_28}
   pages={584},
   year={2024},
   publisher={MDPI},
-  doi={10.3390/electronics13030584}
+  doi={10.3390/electronics13030584},
+series={Electronics 13, no. 3 (2024)}
 }
 
 
@@ -290,7 +307,8 @@ eprint = {
 
 }
 ,
-    abstract = { In general, Natural Language Processing (NLP) algorithms exhibit black-box behavior. Users input text and output are provided with no explanation of how the results are obtained. In order to increase understanding and trust, users value transparent processing which may explain derived results and enable understanding of the underlying routines. Many approaches take an opaque approach by default when designing NLP tools and do not incorporate a means to steer and manipulate the intermediate NLP steps. We present an interactive, customizable, visual framework that enables users to observe and participate in the NLP pipeline processes, explicitly manipulate the parameters of each step, and explore the result visually based on user preferences. The visible NLP (VNLP) pipeline design is then applied to a text similarity application to demonstrate the utility and advantages of a visible and transparent NLP pipeline in supporting users to understand and justify both the process and results. We also report feedback on our framework from a modern languages expert. }
+    abstract = { In general, Natural Language Processing (NLP) algorithms exhibit black-box behavior. Users input text and output are provided with no explanation of how the results are obtained. In order to increase understanding and trust, users value transparent processing which may explain derived results and enable understanding of the underlying routines. Many approaches take an opaque approach by default when designing NLP tools and do not incorporate a means to steer and manipulate the intermediate NLP steps. We present an interactive, customizable, visual framework that enables users to observe and participate in the NLP pipeline processes, explicitly manipulate the parameters of each step, and explore the result visually based on user preferences. The visible NLP (VNLP) pipeline design is then applied to a text similarity application to demonstrate the utility and advantages of a visible and transparent NLP pipeline in supporting users to understand and justify both the process and results. We also report feedback on our framework from a modern languages expert. },
+series={Information Visualization, 20(4), 245-262 (2021)}
 }
 
 
@@ -301,7 +319,8 @@ eprint = {
   booktitle={Annual Meeting of the Association for Computational Linguistics},
   year={2020},
   url={https://api.semanticscholar.org/CorpusID:219179245},
-  doi={10.48550/arXiv.2006.01131}
+  doi={10.48550/arXiv.2006.01131},
+series={arXiv preprint arXiv:2006.01131 (2020)}
 }
 
 
@@ -312,7 +331,8 @@ eprint = {
   year={2021},
   volume={abs/2106.10512},
   url={https://api.semanticscholar.org/CorpusID:235489949},
-  doi={10.48550/arXiv.2106.10512}
+  doi={10.48550/arXiv.2106.10512},
+series={arXiv preprint arXiv:2106.10512 (2021)}
 }
 
 
@@ -322,7 +342,8 @@ eprint = {
   journal={Proceedings of the 24th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
   year={2017},
   url={https://api.semanticscholar.org/CorpusID:26878950},
-  doi={10.48550/arXiv.1710.04725}
+  doi={10.48550/arXiv.1710.04725},
+series={Proceedings of the 24th ACM SIGKDD international conference on knowledge discovery & data mining}
 }
 
 
@@ -349,7 +370,8 @@ doi = {10.5555/3015544.3015551}
   booktitle={Conference on Empirical Methods in Natural Language Processing},
   year={2018},
   url={https://api.semanticscholar.org/CorpusID:53064621},
-  doi={10.48550/arXiv.1812.04361}
+  doi={10.48550/arXiv.1812.04361},
+series={arXiv preprint arXiv:1812.04361}
 }
 
 
@@ -365,7 +387,8 @@ doi = {https://doi.org/10.1016/j.joi.2018.01.001},
 url = {https://www.sciencedirect.com/science/article/pii/S1751157716303777},
 author = {Jaehyeong An and Kyuwoong Kim and Letizia Mortara and Sungjoo Lee},
 keywords = {Technology intelligence, Technology search, Technology trends, Patent analysis, Semantic, Preposition, Text mining, Key-words, Text mining},
-abstract = {Patents are one of the most reliable sources of technology intelligence, and the true value of patent analysis stems from its capability of describing the content of technology based on the relationships between keywords. To date a number of techniques for analyzing the information contained in patent documents that focus on the relationships between keywords have been suggested. However, a drawback of the existing keyword approaches is that they cannot yet determine the types of relationships between the keywords. This study proposes a novel approach based on preposition semantic analysis network which overcomes the limitations of the existing keywords-based network analysis and demonstrates its potential through an application. A preposition is a word that defines the relationship between two neighboring words, and, in the case of patents, prepositions aid in revealing the relationships between keywords related to technologies. To demonstrate the approach, patents regarding an electric vehicle were employed. 13 prepositions were identified which could be used to define 5 relationships between neighboring technological terms: “inclusion (utilization),” “objective (purpose),” “effect,” “process,” and “likeness.” The proposed approach is expected to improve the usability of keyword-based patent analyses and support more elaborate studies on patent documents.}
+abstract = {Patents are one of the most reliable sources of technology intelligence, and the true value of patent analysis stems from its capability of describing the content of technology based on the relationships between keywords. To date a number of techniques for analyzing the information contained in patent documents that focus on the relationships between keywords have been suggested. However, a drawback of the existing keyword approaches is that they cannot yet determine the types of relationships between the keywords. This study proposes a novel approach based on preposition semantic analysis network which overcomes the limitations of the existing keywords-based network analysis and demonstrates its potential through an application. A preposition is a word that defines the relationship between two neighboring words, and, in the case of patents, prepositions aid in revealing the relationships between keywords related to technologies. To demonstrate the approach, patents regarding an electric vehicle were employed. 13 prepositions were identified which could be used to define 5 relationships between neighboring technological terms: “inclusion (utilization),” “objective (purpose),” “effect,” “process,” and “likeness.” The proposed approach is expected to improve the usability of keyword-based patent analyses and support more elaborate studies on patent documents.},
+series={Journal of Informetrics, 12(1), 217-236 (2018)}
 }
 
 
@@ -378,7 +401,8 @@ abstract = {Patents are one of the most reliable sources of technology intellige
   number={},
   pages={105-112},
   keywords={Data mining;Software libraries;Navigation;Machine learning;Support vector machines;Support vector machine classification;Natural language processing;Robustness;Computer science;Bayesian methods},
-  doi={10.1109/ICDIM.2008.4746749}}
+  doi={10.1109/ICDIM.2008.4746749},
+series={2008 Third International Conference on Digital Information Management}}
 
 
 @article{chandola2015online,
@@ -387,7 +411,8 @@ abstract = {Patents are one of the most reliable sources of technology intellige
   journal={Journal of Multi-Disciplinary Engineering Technologies},
   volume={9},
   year={2015},
-url ={http://jmdet.com/wp-content/uploads/2015/08/CR9.pdf}
+url ={http://jmdet.com/wp-content/uploads/2015/08/CR9.pdf},
+series={Journal of Multi-Disciplinary Engineering Technologies, 9}
 }
 
 
@@ -403,7 +428,8 @@ url ={http://jmdet.com/wp-content/uploads/2015/08/CR9.pdf}
   url = {https://www.ije.ir/article_137466.html},
 abstract = {The web and social media are overcrowded with news pieces in terms of amount and diversity. Document clustering is a useful technique that is widely used in organizing and managing data into smaller groups. One of the factors influencing the quality of clustering is the way documents are represented. Some traditional methods of document representation depend on word frequencies and create sparse and large-sized document vectors. These methods cannot preserve proximity information between documents. In addition, neural network-based methods that preserve proximity information suffer from poor interpretability. Conceptual text representation methods have overcome the shortcomings of previous methods, but semi-supervised text clustering does not currently use concept-based document representation. This paper presents a two-level semi-supervised text clustering method that uses labeled and unlabeled data simultaneously to achieve higher clustering quality. In the first level, documents are represented based on the concepts extracted from the raw corpus. Second, the semi-supervised clustering process applies unlabeled data to capture the overall structure of the clusters and a small amount of labeled data to adjust the center of the clusters. Experiments on the Reuters-21578 data collection show that the proposed model is superior to other semi-supervised approaches in both text classification and text clustering.},
 keywords = {News Clustering,Two-level clustering,Semi-supervised,word embedding,Document clustering},
-  publisher={Materials and Energy Research Center}
+  publisher={Materials and Energy Research Center},
+series={International Journal of Engineering, 34(12), pp. 2648-2657 (2021)}
 }
 
 
@@ -416,7 +442,9 @@ keywords = {News Clustering,Two-level clustering,Semi-supervised,word embedding,
   number={},
   pages={1-8},
   keywords={Strontium;Magnetic resonance imaging;Erbium},
-  doi={10.1109/NLPKE.2010.5587779}}
+  doi={10.1109/NLPKE.2010.5587779},
+series={6th International Conference on Natural Language Processing and Knowledge Engineering (NLPKE-2010)}
+}
 
 
 @inproceedings{manning2014stanford,
@@ -426,7 +454,8 @@ keywords = {News Clustering,Two-level clustering,Semi-supervised,word embedding,
   pages={55--60},
   year={2014},
   doi={10.3115/v1/P14-5010},
-url={https://aclanthology.org/P14-5010/}
+url={https://aclanthology.org/P14-5010/},
+series={52nd annual meeting of the association for computational linguistics: system demonstrations, pp. 55-60. 2014}
 }
 
 
@@ -436,5 +465,6 @@ url={https://aclanthology.org/P14-5010/}
   booktitle={Conference on Empirical Methods in Natural Language Processing},
   year={2020},
   url={https://api.semanticscholar.org/CorpusID:225423556},
-  doi={10.48550/arXiv.2008.05122}
+  doi={10.48550/arXiv.2008.05122},
+series={arXiv preprint arXiv:2008.05122 (2020)}
 }
