updated keywords and tags

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -6,7 +6,7 @@
   volume={},
   number={},
   pages={1-8},
-  keywords={Niobium;Support vector machines;Training;Optimization;Computational modeling;Nickel;Radio frequency},
+  keywords={Niobium,Support vector machines,Training,Optimization,Computational modelling,Nickel,Radio frequency},
   doi={10.1109/IJCNN.2015.7280644},
 series={2015 International Joint Conference on Neural Networks (IJCNN)}
 }
@@ -22,7 +22,8 @@ series={2015 International Joint Conference on Neural Networks (IJCNN)}
   pages   = {1--32},
   url     = {http://jmlr.org/papers/v20/18-444.html},
   doi	  = {10.48550/arXiv.1802.09596},
-series={Journal of Machine Learning Research, Vol. 20}
+series={Journal of Machine Learning Research, Vol. 20},
+keywords={ machine learning, supervised learning, classification, hyperparameters, tuning, meta-learning }
 }
 
 
@@ -34,7 +35,8 @@ series={Journal of Machine Learning Research, Vol. 20}
   volume={abs/2007.07588},
   url={https://api.semanticscholar.org/CorpusID:220525868},
   doi	  = {10.48550/arXiv.2007.07588},
-series={arXiv preprint arXiv:2007.07588, 2020}
+series={arXiv preprint arXiv:2007.07588, 2020},
+keywords={ machine learning, hyperparameter tuning, meta learning }
 }
 
 
@@ -76,7 +78,9 @@ pages="102--111",
 abstract="In this paper we use Natural Language Processing techniques to improve different machine learning approaches (Support Vector Machines (SVM), Local SVM, Random Forests) to the problem of automatic keyphrases extraction from scientific papers. For the evaluation we propose a large and high-quality dataset: 2000 ACM papers from the Computer Science domain. We evaluate by comparison with expert-assigned keyphrases. Evaluation shows promising results that outperform state-of-the-art Bayesian learning system KEA improving the average F-Measure from 22{\%} (KEA) to 30{\%} (Random Forest) on the same dataset without the use of controlled vocabularies. Finally, we report a detailed analysis of the effect of the individual NLP features and data set size on the overall quality of extracted keyphrases.",
 isbn="978-3-642-13654-2",
 url={https://link.springer.com/chapter/10.1007/978-3-642-13654-2_12},
-series={ICADL 2010, Lecture Notes in Computer Science, vol. 6102}
+series={ICADL 2010, Lecture Notes in Computer Science, vol. 6102},
+keywords={
+Natural Language Processing, Machine Learning, Keyphrase Extraction, Support Vector Machines, Random Forests }
 }
 
 
@@ -100,7 +104,8 @@ pages="695--704",
 abstract="Pudasaini, ShushantaShakya, SubarnaLamichhane, SagarAdhikari, SajjanTamang, AakashAdhikari, SujanThe world is intrigued by data. In fact, huge capitals are invested to devise means that implements statistics and extract analytics from these sources. However, when we examine the studies performed on applicant tracking systems that retrieve valuable information from candidates' CVs and job descriptions, they are mostly rule-based and hardly manage to employ contemporary techniques. Even though these documents vary in contents, the structure is almost identical. Accordingly, in this paper, we implement an NLP pipeline for the extraction of such structured information from a wide variety of textual documents. As a reference, textual documents which are used in applicant tracking systems like CV (Curriculum Vitae) and job vacancy information have been considered. The proposed NLP pipeline is built with several NLP techniques like document classification, document segmentation and text extraction. Initially for the classification of textual documents, support vector machines (SVM) and XGBoost algorithms have been implemented. Different segments of the identified document are categorized using NLP techniques such as chunking, regex matching and POS tagging. Relevant information from every segment is further extracted using techniques like Named Entity Recognition (NER), regex matching and pool parsing. Extraction of such structured information from textual documents can help to gain insights and use those insights in document maintenance, document scoring, matching and auto-filling forms.",
 isbn="978-981-16-2126-0",
 url={https://link.springer.com/chapter/10.1007/978-981-16-2126-0_54},
-series={Expert Clouds and Applications, Lecture Notes in Networks and Systems, vol. 209}
+series={Expert Clouds and Applications, Lecture Notes in Networks and Systems, vol. 209},
+keywords={ Keywords: NLP, information extraction, segmentation, Named Entity Recognition (NER), GaussianNB, SVM, spaCy }
 }
 
 
@@ -114,7 +119,8 @@ series={Expert Clouds and Applications, Lecture Notes in Networks and Systems, v
   year={2023},
   publisher={Springer},
   doi={10.1007/s11192-023-04689-3},
-series={Scientometrics, Vol. 128}
+series={Scientometrics, Vol. 128},
+keywords={ Text mining · Machine learning · Cluster validation · Document clustering · Research portfolio }
 }
 
 
@@ -126,7 +132,7 @@ series={Scientometrics, Vol. 128}
   volume={},
   number={},
   pages={105-114},
-  keywords={Natural language processing;Runtime;Software;Computer languages;Visualization;Accuracy;Computer architecture;Distributed NLP Tool;Dashboard;Integration and Testing;Visualization;Validation},
+  keywords={Natural language processing,Runtime,Software,Computer languages,Visualization,Accuracy,Computer architecture,Distributed NLP Tool,Dashboard,Integration and Testing,Visualization,Validation},
   doi={10.1109/ICCSA.2013.24},
 series={2013 13th International Conference on Computational Science and Its Applications (ICCSA)}}
 
@@ -157,7 +163,8 @@ eprint = {
     
 
 },
-series={Journal of Computer Information Systems, Vol. 62}
+series={Journal of Computer Information Systems, Vol. 62},
+keywords={ Natural language processing (NLP), data visualization, story analysis, NLP accuracy issues and mitigations, story dashboard generation }
 }
 
 
@@ -170,7 +177,8 @@ series={Journal of Computer Information Systems, Vol. 62}
   volume={abs/1707.01890},
   url={https://api.semanticscholar.org/CorpusID:13324724},
   doi={10.48550/arXiv.1707.01890},
-series={arXiv preprint arXiv:1707.01890 (2017)}
+series={arXiv preprint arXiv:1707.01890 (2017)},
+keywords={ Clinical text analysis, electronic medical records, visualization, interactive machine learning}
 }
 
 
@@ -181,7 +189,8 @@ journal={Political Science Research and Methods},
 author={Arnold, Christian and Biedebach, Luka and Küpfer, Andreas and Neunhoeffer, Marcel}, 
 year={2024}, 
 pages={1–8},
-series={Political Science Research and Methods, 2024}
+series={Political Science Research and Methods, 2024},
+keywords={ Best Practice, Hyperparameter Optimization, Machine Learning }
 } 
 
 
@@ -191,7 +200,9 @@ series={Political Science Research and Methods, 2024}
   journal={arXiv preprint arXiv:2108.13066},
   year={2021},
   doi={10.48550/arXiv.2108.13066},
-series={arXiv preprint arXiv:2108.13066}
+series={arXiv preprint arXiv:2108.13066},
+keywords={ Meta-learning, hyperparameter importance, hyperparameter optimization, classification }
+
 }
 
 
@@ -222,7 +233,7 @@ and Du, Jia Tina
 and Soares, Ant{\'o}nio Lucas
 and Hessami, Viviane
 and Frank, Rebecca D.",
-title="Similarity Visualizer Using Natural Language Processing in Academic Documents of the DSpace in Ecuador",
+title="Similarity Visualizer Using Natural Language Processing in Academic Documents of the DSpace in Ecuador",
 booktitle="Information for a Better World: Normality, Virtuality, Physicality, Inclusivity",
 year="2023",
 publisher="Springer Nature Switzerland",
@@ -231,7 +242,9 @@ pages="343--359",
 abstract="Due to the widespread use of the Internet, users have the ease of accessing collections of university academic documents stored in virtual libraries whose information is of an unstructured type. In recent years, the production and publication of scientific documents in Ecuador have increased considerably, so the search and classification of documents is a fundamental task within information retrieval computer systems. Intelligent search systems allow found information with a high degree of accuracy and similarity. For the development of this project, academic documents from the Ecuador Network of Open Access Repositories (RRAAE) were retrieved using a glossary of terms in the area of science and technology. For the recovery of documents, the web scraping technique was used and its results were stored in a cloud database in JSON format. In the recovered documents, NLP techniques were applied to clean and homogenize the unstructured information. Two similarity metrics were used to measure the divergence between the retrieved documents, and similarity matrices were generated based on the title, keywords, and abstract, which were then unified into a weighted matrix. The results of the system are displayed in a web interface that, through the use of graphs, shows the relationship between the linked documents. The operation of the similarity system was validated through functional tests through experimentation with a collection of 30 queries with indexed and non-indexed terms in the input of the information retrieval system. The experiments showed that for indexed terms, the system performs better.",
 isbn="978-3-031-28032-0",
 url={https://link.springer.com/chapter/10.1007/978-3-031-28032-0_28},
-series={Information for a Better World: Normality, Virtuality, Physicality, Inclusivity. iConference 2023}
+series={Information for a Better World: Normality, Virtuality, Physicality, Inclusivity. iConference 2023},
+ keywords={ Vector cosine similarity , Web scraping ,Connected papers ,Jaccard ,Artificial intelligence , University repositories ,DSpace , Graphs }
+
 }
 
 
@@ -249,7 +262,8 @@ series={Information for a Better World: Normality, Virtuality, Physicality, Incl
     doi = {10.1136/amiajnl-2011-000183},
     url = {https://doi.org/10.1136/amiajnl-2011-000183},
     eprint = {https://academic.oup.com/jamia/article-pdf/18/5/607/5964646/18-5-607.pdf},
-series={Journal of the American Medical Informatics Association, Volume 18}
+series={Journal of the American Medical Informatics Association, Volume 18},
+keywords={ Clinical Natural Language Processing, Information Extraction, Concept-level Retrieval, Machine Learning Classifiers, Medical Concept Extraction}
 }
 
 
@@ -262,7 +276,9 @@ series={Journal of the American Medical Informatics Association, Volume 18}
   volume={abs/1807.02383},
   url={https://api.semanticscholar.org/CorpusID:49653505},
   doi={10.48550/arXiv.1807.02383},
-series={ArXiv abs/1807.02383 (2018)}
+series={ArXiv abs/1807.02383 (2018)},
+keywords={ Information Extraction, Information Retrieval, Named Entity Recognition, Natural Language Processing, Unstructured Data Processing }
+
 }
 
 
@@ -276,7 +292,9 @@ series={ArXiv abs/1807.02383 (2018)}
   year={2024},
   publisher={MDPI},
   doi={10.3390/electronics13030584},
-series={Electronics 13, no. 3 (2024)}
+series={Electronics 13, no. 3 (2024)},
+keywords={ natural language processing, big data, sentiment analysis,similarity analysis, word dictionary, word cloud }
+
 }
 
 
@@ -305,7 +323,9 @@ eprint = {
     
     
 
-}
+},
+keywords={ Text alignment, parallel translations, text visualization }
+
 ,
     abstract = { In general, Natural Language Processing (NLP) algorithms exhibit black-box behavior. Users input text and output are provided with no explanation of how the results are obtained. In order to increase understanding and trust, users value transparent processing which may explain derived results and enable understanding of the underlying routines. Many approaches take an opaque approach by default when designing NLP tools and do not incorporate a means to steer and manipulate the intermediate NLP steps. We present an interactive, customizable, visual framework that enables users to observe and participate in the NLP pipeline processes, explicitly manipulate the parameters of each step, and explore the result visually based on user preferences. The visible NLP (VNLP) pipeline design is then applied to a text similarity application to demonstrate the utility and advantages of a visible and transparent NLP pipeline in supporting users to understand and justify both the process and results. We also report feedback on our framework from a modern languages expert. },
 series={Information Visualization, 20(4), 245-262 (2021)}
@@ -320,7 +340,9 @@ series={Information Visualization, 20(4), 245-262 (2021)}
   year={2020},
   url={https://api.semanticscholar.org/CorpusID:219179245},
   doi={10.48550/arXiv.2006.01131},
-series={arXiv preprint arXiv:2006.01131 (2020)}
+series={arXiv preprint arXiv:2006.01131 (2020)},
+keywords={ NLP Scholar Project, Unified Dataset, Interactive Visualizations, Citation Analysis, ACL Anthology }
+
 }
 
 
@@ -332,7 +354,9 @@ series={arXiv preprint arXiv:2006.01131 (2020)}
   volume={abs/2106.10512},
   url={https://api.semanticscholar.org/CorpusID:235489949},
   doi={10.48550/arXiv.2106.10512},
-series={arXiv preprint arXiv:2106.10512 (2021)}
+series={arXiv preprint arXiv:2106.10512 (2021)},
+keywords={ Twitter NLP Data, Visualization Platform, TweetExplorer, NLP Conferences, Research Paper Discovery }
+
 }
 
 
@@ -343,7 +367,9 @@ series={arXiv preprint arXiv:2106.10512 (2021)}
   year={2017},
   url={https://api.semanticscholar.org/CorpusID:26878950},
   doi={10.48550/arXiv.1710.04725},
-series={Proceedings of the 24th ACM SIGKDD international conference on knowledge discovery & data mining}
+series={Proceedings of the 24th ACM SIGKDD international conference on knowledge discovery & data mining},
+keywords={ Hyperparameter Optimization, Hyperparameter Importance, metalearning }
+
 }
 
 
@@ -360,7 +386,9 @@ pages = {18–23},
 numpages = {6},
 location = {Prague, Czech Republic},
 series = {MLAS'14},
-doi = {10.5555/3015544.3015551}
+doi = {10.5555/3015544.3015551},
+keywords={ Metalearning, Algorithm Selection, Parameter Optimization, Classification Learning, Model Accuracy }
+
 }
 
 
@@ -371,7 +399,9 @@ doi = {10.5555/3015544.3015551}
   year={2018},
   url={https://api.semanticscholar.org/CorpusID:53064621},
   doi={10.48550/arXiv.1812.04361},
-series={arXiv preprint arXiv:1812.04361}
+series={arXiv preprint arXiv:1812.04361},
+keywords={ Relation Extraction, Distant Supervision, Knowledge Bases, Side Information, RESIDE Model }
+
 }
 
 
@@ -400,7 +430,7 @@ series={Journal of Informetrics, 12(1), 217-236 (2018)}
   volume={},
   number={},
   pages={105-112},
-  keywords={Data mining;Software libraries;Navigation;Machine learning;Support vector machines;Support vector machine classification;Natural language processing;Robustness;Computer science;Bayesian methods},
+  keywords={Data mining,Software libraries,Navigation,Machine learning,Support vector machines,Support vector machine classification,Natural language processing,Robustness,Computer science,Bayesian methods},
   doi={10.1109/ICDIM.2008.4746749},
 series={2008 Third International Conference on Digital Information Management}}
 
@@ -412,7 +442,9 @@ series={2008 Third International Conference on Digital Information Management}}
   volume={9},
   year={2015},
 url ={http://jmdet.com/wp-content/uploads/2015/08/CR9.pdf},
-series={Journal of Multi-Disciplinary Engineering Technologies, 9}
+series={Journal of Multi-Disciplinary Engineering Technologies, 9},
+keywords={ Text Analytics, Sentiment Analysis, Natural Language Processing, Text Mining, Lexical Analysis }
+
 }
 
 
@@ -443,7 +475,7 @@ series={International Journal of Engineering, 34(12), pp. 2648-2657 (2021)}
   pages={1-8},
   keywords={Strontium;Magnetic resonance imaging;Erbium},
   doi={10.1109/NLPKE.2010.5587779},
-series={6th International Conference on Natural Language Processing and Knowledge Engineering (NLPKE-2010)}
+series={6th International Conference on Natural Language Processing and Knowledge Engineering (NLPKE-2010)},
 }
 
 
@@ -455,7 +487,9 @@ series={6th International Conference on Natural Language Processing and Knowledg
   year={2014},
   doi={10.3115/v1/P14-5010},
 url={https://aclanthology.org/P14-5010/},
-series={52nd annual meeting of the association for computational linguistics: system demonstrations, pp. 55-60. 2014}
+series={52nd annual meeting of the association for computational linguistics: system demonstrations, pp. 55-60. 2014},
+keywords={ Stanford CoreNLP, Natural Language Processing Toolkit, Annotation Pipeline, Design and Development, Core NLP Steps, Usage Patterns }
+
 }
 
 
@@ -466,5 +500,7 @@ series={52nd annual meeting of the association for computational linguistics: sy
   year={2020},
   url={https://api.semanticscholar.org/CorpusID:225423556},
   doi={10.48550/arXiv.2008.05122},
-series={arXiv preprint arXiv:2008.05122 (2020)}
+series={arXiv preprint arXiv:2008.05122 (2020)},
+keywords={ Model Understanding, Visualization Platform, Error Analysis, Local Explanations, Aggregate Analysis, Counterfactual Generation }
+
 }
